<resources>
    <string name="app_name">Nefis Yemek Tarifleri</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Parolunuz çok kısa, en azı 6 karakter olmalı!</string>
    <string name="auth_failed">Kimlik doğrulama başarısız, e-posta adresinizi ve şifrenizi kontrol edin veya kaydolun</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Parolanı Deyiş</string>
    <string name="send_password_reset_email">Parola sıfırlama e-postası gönder</string>
    <string name="remove_user">Hesapı Sil</string>
    <string name="new_pass">Lütfən parolanı yeniden dahil edin...</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Giriş Yap</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Lütfən parolanı yaziniz...</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Deyiş</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Sil</string>
    <string name="btn_sign_out">Çıkış Yap</string>
    <string name="lbl_forgot_password">Şifreni Unutdun?</string>
    <string name="forgot_password_msg">Size parola sıfırlama talimatlarını göndermek için sadece kayıtlı e-posta kimliğinize ihtiyacımız var.</string>
    <string name="email_id">Email ID</string>


</resources>
