<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/SonAsama"
    android:background="@drawable/register_list"
    android:orientation="vertical"
    tools:context=".AccountActivity.ComeTesxts">


    <EditText
        android:background="@drawable/text_dizayin"
        android:id="@+id/old_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="18dp" />

    <EditText
        android:layout_marginTop="8dp"
        android:background="@drawable/text_dizayin"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPassword"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_toRightOf="@+id/progressBar"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="18dp" />

    <EditText
        android:layout_marginTop="8dp"
        android:background="@drawable/text_dizayin"
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="18dp"
        />

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/resset_back_button"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold"
         />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_alignStart="@+id/changePass"
        android:layout_alignLeft="@+id/changePass"
        android:layout_marginBottom="5dp"
        android:background="@drawable/sil"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="259dp" />

    <Button
        android:textColor="@color/black"
        android:background="@color/white"
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button"
        android:layout_alignLeft="@+id/remove_user_button"
        android:text="@string/change_password"
        android:textStyle="bold"
         />

    <Button
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out"
        android:layout_alignLeft="@+id/sign_out"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp" />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/black"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textSize="30sp"
        android:textStyle="bold|italic" />


</RelativeLayout>